app(nginx-for testing)/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: demo
      port:
        number: 80



### legacy
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: demo-ingress
# spec:
#   backend:
#     serviceName: demo
#     servicePort: 80


### wrong, need to change
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: final-task-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /finaltask
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /app
#         pathType: Prefix
#         backend:
#           service:
#             name: demo
#             port:
#               number: 80
